<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Monitor</string>
    <string name="action_settings">Settings</string>
    
    <!-- The key values for the map used to access Project data 
    So if you want to get the data stored at the latitude you call 
    settings.getFloat(@string/user_location_latitude) -->
    
    <!-- The way to access these data fields is to call 
    getResources().getString(R.string.user_username) -->
    
    <string name="monitor_data">Monitor</string>
    
    <!-- Jakes key strings -->
    
    <string name="user_username">username</string>
    <string name="user_password">password</string>
    
    <!-- Jake and Yutthana's strings -->
    
    <string name="user_first_name">first name</string>
    <string name="user_last_name">last name</string>
    <string name="user_age">age</string>
    <string name="user_sex">sex</string>
    <string name="user_height">height</string>
    <string name="user_weight">weight</string>
    <string name="user_email">email</string>
    <string name="user_bmi">bmi</string>
    <string name="user_address">normal address</string>
    <string name="emergency_first_name">emergency first name</string>
    <string name="emergency_last_name">emergency last name</string>
    <string name="emergency_relation">relation</string>
    <string name="emergency_phone_number">emergency phone number</string>
    <string name="emergency_email">emergency email</string>
    
    <!-- Yutthana's key strings -->
    
    <string name="gps_status">gps status</string>
    <string name="bluetooth_status">bluetooth status</string>
    <string name="mute_status">mute status</string>
    <string name="vibrate_status">vibrate status</string>
    <string name="notification_status">notification status</string>
    <string name="volume_level">volume level</string>
    <string name="font_size">font size</string>
    
    <!-- Brian and Troy's key strings -->
    
    <string name="user_location_latitude">location latitude</string>
    <string name="user_location_longitude">location longitude</string>
    <string name="user_walking_speed">walking speed</string>
    <string name="user_fall_status">fall status</string>
    <string name="user_overall_health">overall health</string>
    <string name="user_heart_rate">heartrate</string>
    <string name="location">temp TextView name</string>
    <string name="in_health_activity">in it</string>
    
    <!-- Strings that are used for Widget names (ie Buttons, TextView, EditTexts, etc) -->
    
    <string name="logo_text_string">LOGO</string>
    
    <!-- Login Widget Strings -->
    
    <string name="remember_me_string">Remember Me?</string>
    <string name="password_hint_string">Password</string>
    <string name="username_hint_string">Username</string>
    <string name="sign_up_text_string">Sign up</string>
    <string name="login_button_string">Login</string>
    
    <!-- Health Widget Strings -->
    
    <string name="overall_health_string">Overall Health:</string>
    <string name="walking_speed_string">Walking Speed:</string>
    <string name="fall_status_string">Fall Status:</string>
    <string name="location_string">Location:</string>
    <string name="heart_rate_string">Heart rate:</string>
    
    <!-- Main Menu Widget Strings -->
    
    <string name="health_button_string">Health</string>
    <string name="profile_button_string">Profile</string>
    <string name="options_button_string">Options</string>
    <string name="emergency_button_string">EMERGENCY</string>
    
    <!-- Options Widget Strings -->
    
    <string name="notification_string">Notification</string>
    <string name="sound_string">Sound</string>
    <string name="mute_string">Mute</string>
    <string name="vibrate_string">Vibrate</string>
    <string name="font_size_string">Font Size</string>
    <string name="L_string">Large</string>
    <string name="M_string">Medium</string>
    <string name="S_string">Small</string>
    <string name="GPS_string">GPS</string>
    <string name="bluetooth_string">Bluetooth</string>
    
    <!-- Profile Widget Strings -->
    
    <string name="user_first_name_string">First Name:</string>
    <string name="user_last_name_string">Last Name:</string>
    <string name="user_age_string">Age:</string>
    <string name="user_sex_string">Sex:</string>
    <string name="user_address_string">Address:</string>
    <string name="user_street_string">Street:</string>
    <string name="user_optional_string">Optional:</string>
    <string name="user_height_string">Height:</string>
    <string name="user_weight_string">Weight:</string>
    <string name="user_email_string">Email:</string>
    <string name="user_BMI_string">BMI:</string>
    <string name="emergency_relation_string">Relation:</string>
    <string name="emergency_phone_number_string">Phone number:</string>
    <string name="profile_pic_string">Profile Picture</string>
    
    <!-- Emergency Widget Strings -->
    
    <string name="ok_string">I am OK</string>
    <string name="help_string">HELP</string>
    <string name="emergency_detected_string">EMERGENCY DETECTED</string>
    <string name="countdown_pic_string">Countdown Pic</string>
    
    <string name="Name">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="Age">Age:</string>
    <string name="Sex">Sex:</string>
    <string name="Address">Address:</string>
    <string name="Phone">Phone Number:</string>
    <string name="Emer_Phone">Emergency number:</string>
    <string name="Street">Street:</string>
    <string name="City">City, State Zip code:</string>
    <string name="Optional">Optional:</string>
    <string name="Email">Email:</string>
    <string name="BMI">BMI:</string>
    <string name="Activity">Activity Level:</string>
    <string name="Relation">Relation to patient:</string>
    <string name="Relation1">Relation:</string>
    <string name="Emer_Info">Emergency Contact Info:</string>
    
    
    <string-array name="ADL_array">
        
        <item>Front-lying-FALL</item>
        <item>Front-protecting-lying-FALL</item>
        <item>Front-knees-FALL</item>
        <item>Front-right-FALL</item>
        <item>Front-left-FALL</item>
        <item>Front-quick-recovery-FALL</item>
        <item>Front-slow-recovery-FALL</item>
        <item>Back-sitting-FALL</item>
        <item>Back-lying-FALL</item>
        <item>Back-right-FALL</item>
        <item>Back-left-FALL</item>
        <item>Right-sideway-FALL</item>
        <item>Right-recovery-FALL</item>
        <item>Left-sideway-FALL</item>
        <item>Left-recovery-FALL</item>
        <item>Syncope-FALL</item>
        <item>Syncope-wall-FALL</item>
        <item>Podium-FALL</item>
        <item>Rolling-out-bed-FALL</item>
        
        <item>Lying-bed</item>
        <item>Rising-bed</item>
        <item>Sit-bed</item>
        <item>Sit-chair</item>
        <item>Sit-sofa</item>
        <item>Sit-air</item>
        <item>Walking-forward</item>
        <item>Jogging</item>
        <item>Walking-backward</item>
        <item>Bending</item>
        <item>Bending-pick-up</item>
        <item>Stumble</item>
        <item>Limp</item>
        <item>Squatting-down</item>
        <item>Trip-over</item>
        <item>Coughing-sneezing</item>
        
    </string-array>
    
</resources>
