<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainMenuActivity" >

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="60"
        android:contentDescription="@string/logo_text_string"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/username_hint_string"
        android:inputType="text" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/password_hint_string"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/bLogin"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="6.90"
        android:text="@string/login_button_string" />
    
     <TextView
         android:id="@+id/tvSignUp"
         android:layout_width="52dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ems="10"
         android:text="@string/sign_up_text_string" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center" >

         <TextView
             android:id="@+id/tvRememberMe"
             android:layout_width="116dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:text="@string/remember_me_string" />

         <CheckBox
             android:id="@+id/cbRememberMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
    
</LinearLayout>