<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dip"
        android:layout_gravity="center"
        android:text="@string/logo_text_string" />

    <Button
        android:id="@+id/health_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginBottom="20dip"
        android:layout_gravity="center"
        android:text="@string/health_button_string" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginBottom="20dip"
        android:layout_gravity="center"
        android:text="@string/profile_button_string" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginBottom="20dip"
        android:layout_gravity="center"
        android:text="@string/options_button_string" />


    <Button
        android:id="@+id/emergency_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="50dip"
        android:layout_gravity="center"
        android:text="@string/emergency_button_string" />

</LinearLayout>
