<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/notification_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvNotification"
        android:layout_below="@+id/tvNotification"
        android:layout_marginTop="14dp"
        android:text="@string/sound_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/tbNotificationToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="52dp" />

    <SeekBar
        android:id="@+id/sbSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSound"
        android:layout_below="@+id/tvSound"
        android:layout_marginTop="14dp" />

    <CheckBox
        android:id="@+id/cbMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sbSound"
        android:layout_below="@+id/sbSound"
        android:text="@string/mute_string" />

    <CheckBox
        android:id="@+id/cbVibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbMute"
        android:layout_below="@+id/cbMute"
        android:text="@string/vibrate_string" />

    <TextView
        android:id="@+id/tvFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbVibrate"
        android:layout_below="@+id/cbVibrate"
        android:text="@string/font_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgTextSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFontSize"
        android:layout_below="@+id/tvFontSize" >

        <RadioButton
            android:id="@+id/rSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/S_string"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioButton
            android:id="@+id/rMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/M_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/rLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/L_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgTextSizes"
        android:layout_below="@+id/rgTextSizes"
        android:layout_marginTop="15dp"
        android:text="@string/GPS_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/tbGPSToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tbNotificationToggle"
        android:layout_alignTop="@+id/tvGPS" />

    <ToggleButton
        android:id="@+id/tbBlueToothToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tbGPSToggle"
        android:layout_alignTop="@+id/tvBluetooth" />

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvGPS"
        android:layout_below="@+id/tvGPS"
        android:layout_marginTop="23dp"
        android:text="@string/bluetooth_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>