<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ProfileActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivProPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_pic_string"
            android:src="@drawable/profile_pic" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="left" >

            <TextView
                android:id="@+id/tvFirstNameMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/user_first_name_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvLastNameMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvFirstNameMsg"
                android:text="@string/user_last_name_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvAgeMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvLastNameMsg"
                android:text="@string/user_age_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvAddressMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tvAgeMsg"
                android:text="@string/user_address_string"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvLastNameMsg"
                android:layout_alignParentRight="true"
                android:text="@string/user_first_name" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvAgeMsg"
                android:layout_alignParentRight="true"
                android:text="@string/user_last_name" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvAddressMsg"
                android:layout_alignParentRight="true"
                android:text="@string/user_age" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/user_address" />

        </RelativeLayout>
    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_gravity="center"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/tvEmergencyNumber"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="Emergency Number:"
		    android:layout_marginBottom="20dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_gravity="left" />
		
		<TextView
		    android:id="@+id/tvDr"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="left"
		    android:layout_marginBottom="20dp"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:text="Dr:" />
	</LinearLayout>
</LinearLayout>