<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmergencyActivity" >

    <Button
        android:id="@+id/bOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bHELP"
        android:layout_alignParentRight="true"
        android:layout_marginRight="46dp"
        android:text="@string/ok_string" />

    <TextView
        android:id="@+id/tvEmergencyDetected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emergency_detected_string" >

        <requestFocus />
    </TextView>

    <ImageView
        android:id="@+id/ivCountdownFrame"
        android:contentDescription="@string/countdown_pic_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bOK"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:drawable="@drawable/countdown_animation" />

    <Button
        android:id="@+id/bHELP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="97dp"
        android:layout_toLeftOf="@+id/ivCountdownFrame"
        android:text="@string/help_string" />

</RelativeLayout>
